--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@ v0.3.2
  - Added a disclaimer in the face of New York Times shutting down Wordle Archive.
  - Changed "Statistical" to "Information Theory".
  - Modified hard mode Information Theory Algorithm to make better guesses. The best performance achieved so far is 99.96% success (2308 or 2309 Wordle words passed), using the word "champ".
+ - Fixed a memory leak.
 
 v0.3.1.1
  - Updated the word list in this app as Wordle had its word list changed.
