--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+v0.3.4
+ - Updated the word list in this app as Wordle had its word list changed.
+ - This is to avoid a word being seen as a commentary of the current debate of abortion rights.
+
 v0.3.3
  - Selemat Hari Raya Aidilfitri (Eid al-Fitr) for Muslim friends.
  - Added two words into valid guesses word list: 'koran' and 'quran'
