--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,9 @@ v0.4.0
  - Make logs less annoying.
  - Used a new counter system.
  - Removed silly Heap Sort implementation.
+ - Made several debugging features available without modifying the source code.
+ - Included a debugging feature for Informational theory solvers which allows it to log the scores for all possible suggestions into 'debug.txt'.
+ - Spoiler mode is accessible via two secret codes (only require one to activate). One is stored as obfuscated text and the other is stored as a hash.
 
 v0.3.4
  - Updated the word list in this app as Wordle had its word list changed.
@@ -36,3 +39,4 @@ v0.3.0
  - Solver also includes an imitated Wordle game, as well as a algorithm tester.
  - Includes 12947 words from the official Wordle game. 2309 of them are answers. Words are currently hard coded in the program
  - Also includes 5837 extra words not in Wordle's word list.
+ 
